--- a/devin-michael/package.json
+++ b/devin-michael/package.json
@@ -10,6 +10,7 @@
   "author": "Devin and",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "nodemon": "^1.13.3"
   }
 }
